4D Mobile App - dark mode corrections
Jobs: redmine:119778 redmine:88529
[git-p4: depot-paths = "//depot/4eDimension/main/4DComponents/Internal User Components/4D Mobile App/": change = 277132]

--- a/Project/Sources/styleSheets.css
+++ b/Project/Sources/styleSheets.css
@@ -55,6 +55,18 @@ rectangle {
 				}
 			}
 
+.coloredBanner {
+	fill: #1BA1E5;
+	stroke: #1BA1E5;
+}
+
+			@media (prefers-color-scheme: dark) {
+				.coloredBanner {
+					fill: #0D3648;
+					stroke: #0D3648;
+				}
+			}
+
 .toolbarButtons {
 	stroke: #808080;
 }
